hmm_detection: add NRP-metallophore detection rule

--- a/antismash/outputs/html/css/secmet.scss
+++ b/antismash/outputs/html/css/secmet.scss
@@ -123,8 +123,16 @@
     @include secmet(black, yellowgreen, black);
 }
 
-.siderophore {
+@mixin metallophore {
     @include secmet(white, crimson, blue);
+}
+
+.siderophore {
+    @include metallophore;
+}
+
+.NRP-metallophore {
+    @include metallophore
 }
 
 .ectoine {
