html: pad detail tab labels slightly to have solid colour above text

--- a/antismash/outputs/html/css/style.scss
+++ b/antismash/outputs/html/css/style.scss
@@ -1056,6 +1056,7 @@ ul.dropdown-options {
         margin-right: 0.1em;
         padding-left: 0.5em;
         padding-right: 0.5em;
+        padding-top: 1px;
 
         /* solve edge single pixel gap */
         padding-bottom: 1px;
