--- a/antismash/modules/thiopeptides/templates/details.html
+++ b/antismash/modules/thiopeptides/templates/details.html
@@ -3,7 +3,7 @@
       <span>Thiopeptide predictions</span>
       {{help_tooltip(tooltip, "thio-body")}}
     </div>
-  {% if not cluster.motifs %}
+  {% if not motifs %}
     <div class="details-text">
       No core peptides found.
     </div>
@@ -11,23 +11,10 @@
     <h4> Thiopeptide(s) </h4>
     <hr>
     <dl class="details-text">
-      {% for motif in cluster.motifs if motif.peptide_class == "thiopeptide" %}
+      {% for motif in motifs %}
         <dt> {{motif.locus_tag.rsplit("_", 1)[0]}} leader / core peptide, putative {{motif.peptide_subclass}} </dt>
         <dd>
-          {{ motif.leader }}
-          -
-          {% for aa in motif.core -%}
-            {%- if aa == 'S' -%}
-              <span class="dha">Dha</span>
-            {%- elif aa == 'T' -%}
-              <span class="dhb">Dhb</span>
-            {%- elif aa == 'C' -%}
-              <span class="cys">C</span>
-            {%- else -%}
-              {{ aa }}
-            {%- endif -%}
-          {% endfor -%}
-          <span class="cut">{{motif.tail}}</span>
+          {{ motif.leader }} - {{ coloured_ripp_sequence(motif.core, dehydrate=True) }}<span class="cut">{{ motif.tail }}</span>
         </dd>
       {% endfor %}
     </dl>
