--- a/antismash/outputs/html/templates/svg_references.html
+++ b/antismash/outputs/html/templates/svg_references.html
@@ -2,7 +2,7 @@
     Required instead of referring to standalone SVGs in images/ because neither
     Chrome nor Edge (pre-chromium) will render those.
 -#}
-<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width=0 height=0>
  <defs>
   {# used by NRPS/PKS module lid constructs -#}
   <filter id="inset-shadow">
