html: prepare for non-elongating modules with CSS

--- a/antismash/outputs/html/css/style.scss
+++ b/antismash/outputs/html/css/style.scss
@@ -1448,6 +1448,11 @@ ul.dropdown-options {
     stroke: black;
 }
 
+.bubble-module-line-non-elongating {
+    @extend .bubble-module-line;
+    stroke-dasharray: 0.5em;
+}
+
 .domain-bubble-container {
     * .bubble-module-label {
         .bubble-module-monomer {
