clusterblast: allow embedding data version and include in output

--- a/antismash/modules/clusterblast/templates/knownclusterblast.html
+++ b/antismash/modules/clusterblast/templates/knownclusterblast.html
@@ -1,6 +1,6 @@
 <div class = "knownclusterblast">
     <div class="heading">
-      <span>Similar known gene clusters</span>
+      <span>Similar known gene clusters from MIBiG {{ version }}</span>
       {{help_tooltip(tooltip, "cb-known")}}
     </div>
   {% if region.knowncluster_blast %}
