hmm_detection: rename siderophore rule to NRPS-independent siderophore

--- a/antismash/outputs/html/css/secmet.scss
+++ b/antismash/outputs/html/css/secmet.scss
@@ -127,7 +127,7 @@
     @include secmet(white, crimson, blue);
 }
 
-.siderophore {
+.NRPS-independent-siderophore {
     @include metallophore;
 }
 
