hmm_detection: add opine-like-metallophore rule
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/antismash/outputs/html/css/secmet.scss
+++ b/antismash/outputs/html/css/secmet.scss
@@ -139,6 +139,10 @@
     @include metallophore
 }
 
+.opine-like-metallophore {
+    @include metallophore
+}
+
 .ectoine {
     @include osmolyte;
 }
