hmm_detection: add aminopolycarboxylic-acid rule
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/antismash/outputs/html/css/secmet.scss
+++ b/antismash/outputs/html/css/secmet.scss
@@ -143,6 +143,10 @@
     @include metallophore
 }
 
+.aminopolycarboxylic-acid {
+    @include metallophore
+}
+
 .ectoine {
     @include osmolyte;
 }
