html: remove antiSMASH javascript from the source tree

--- a/antismash/outputs/html/templates/overview.html
+++ b/antismash/outputs/html/templates/overview.html
@@ -99,7 +99,7 @@
 {% include 'footer.html' %}
 
   <script src="js/jquery.js"></script>
-  <script src="js/antismash.js"></script>
+  <script src="{{as_js_url}}"></script>
   <script src="regions.js"></script>
   <script>
     $(document).ready(function() {
