hmm_detection: shorten rule name for NRPS-independent siderophores

--- a/antismash/outputs/html/css/secmet.scss
+++ b/antismash/outputs/html/css/secmet.scss
@@ -127,7 +127,7 @@
     @include secmet(white, crimson, blue);
 }
 
-.NRPS-independent-siderophore {
+.NI-siderophore {
     @include metallophore;
 }
 
