--- a/antismash/outputs/html/css/style.scss
+++ b/antismash/outputs/html/css/style.scss
@@ -45,7 +45,7 @@ a, .clipboard-copy, .link-like {
     cursor: pointer;
     padding-right: 0.3em;
     padding-left: 0.3em;
-    padding-top: 0.3em;
+    padding-top: 0.1em;
     font-size: 95%;  /* just enough to have background between links in text */
 
     &:active {
@@ -980,6 +980,9 @@ rect.generic-type-transport {
 .external-link:after {
     @include decorator();
     font-size: 75%;
+    background-size: 1em 1em;
+    height: 1em;
+    width: 1em;
     background-image: url(../images/external-link-alt-solid.svg);
 }
 
