nrps_pks: rename sidepanel to substrates instead of monomers

--- a/antismash/modules/nrps_pks/templates/monomers.html
+++ b/antismash/modules/nrps_pks/templates/monomers.html
@@ -1,6 +1,6 @@
 <div class="more-details">
     <div class="heading">
-      <span>NRPS/PKS monomer predictions</span>
+      <span>NRPS/PKS substrate predictions</span>
       {{help_tooltip(tooltip, "nrps-monomers")}}
     </div>
   <dl class="prediction-text">
