--- a/antismash/outputs/html/css/secmet.scss
+++ b/antismash/outputs/html/css/secmet.scss
@@ -5,7 +5,7 @@
     a, a:link, a:visited {
         color: $fg;
     }
-    rect& {
+    @at-root rect#{&} {
         fill: $bg;
         stroke: $highlight;
     }
@@ -215,20 +215,24 @@
     @include hydrocarbon;
 }
 
-.unknown {
+@mixin unknown {
     @include secmet(black, #f2f2f2, black);
 }
 
+.unknown {
+    @include unknown;
+}
+
 .saccharide {
-    @extend .unknown;
+    @include unknown;
 }
 
 .fatty_acid {
-    @extend .unknown;
+    @include unknown;
 }
 
 .halogenated {
-    @extend .unknown;
+    @include unknown;
 }
 
 .hybrid { // needs to remain at the bottom to override all the above
