chore: add missing semicolons to secmet.scss

--- a/antismash/outputs/html/css/secmet.scss
+++ b/antismash/outputs/html/css/secmet.scss
@@ -132,19 +132,19 @@
 }
 
 .NRP-metallophore {
-    @include metallophore
+    @include metallophore;
 }
 
 .methanobactin {
-    @include metallophore
+    @include metallophore;
 }
 
 .opine-like-metallophore {
-    @include metallophore
+    @include metallophore;
 }
 
 .aminopolycarboxylic-acid {
-    @include metallophore
+    @include metallophore;
 }
 
 .ectoine {
